# astra

./: .gitignore  README.md
.kiro/specs/declarative-ui-generation/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/digital-twin-knowledge-graph/: .config.kiro  requirements.md
.kiro/specs/memory-workflows-intelligence/: design.md  requirements.md  tasks.md
.kiro/specs/tauri-docker-wss-architecture/: .config.kiro  design.md  requirements.md  tasks.md
PoC/astra-poc-vc/: .dockerignore  .env.example  .gitignore  Dockerfile  a2ui_models.py  agent.py  docker-compose.yml  domain_router.py  email_poller.py  file_ingestion.py  main.py  memory.py  models.py  requirements.txt  run.sh  session.py  stock_streamer.py  test_main.py  test_run_python_code.py  test_session.py  test_zoho_connection.py  tools_email_calendar.py  tools_files.py  tools_memory.py  tools_stock.py  tools_travel.py  tracing.py  workflow_engine.py
PoC/astra-poc-vc/docs/: ARCHITECTURE.md  ATTENTION_BIAS_SELF_LEARNING.md  BOOTABLE_AIOS_SPEC.md  FILE_SYSTEM.md  PITCH.md
PoC/astra-poc-vc/prompts/: a2ui_catalog.md  design_system.md  install_python_packages.md  persona_context.md  render_widget.md  run_python_code.md  system.md  widget_templates.md
PoC/astra-poc-vc/providers/: __init__.py  base.py  factory.py  google.py  mock.py  zoho.py
PoC/astra-poc-vc/static/: app.js  index.html
PoC/astra-poc-vc/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
PoC/astra-poc-vc/tauri-app/src-tauri/src/: docker.rs  lib.rs  loading.html  main.rs
data/: bloomberg_email_template.html  setup-mike.sh
(+53 files in other folders)
