[package]
name = "astra-poc"
version = "0.1.0"
edition = "2021"
description = "Astra PoC - Tauri Desktop Shell"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking"] }
rfd = "0.15"
toml = "0.8"
dotenvy = "0.15"
urlencoding = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
